--- a/src/app/components/detail-kajian/detail-kajian.component.html
+++ b/src/app/components/detail-kajian/detail-kajian.component.html
@@ -1,39 +1,41 @@
-<div class="container">
-	<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body kajian">
-	<div class="row"> 
-	  <div class="col-8 author">
-	        <a href="#">
-	          <img src="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/256x256/plain/user.png" alt="">
-	          <span>{{ kajian.author }}</span>
-	        </a>
-	  </div>
-	  <div class="col-4 option text-right dropdown">
-		  <button type="button" id="dropdownOption" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    <i class="fa fa-ellipsis-v"></i>
-		  </button>
-		  <div class="dropdown-menu" aria-labelledby="dropdownOption">
-		    <a class="dropdown-item" routerLink="/profile/e/{{id}}">Edit</a>
-		    <button class="dropdown-item" (click)="delete(id)">Delete</button>
-		  </div>
-	  </div>
+<div class="inner-wrapper">
+	<div class="container">
+		<div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body kajian detail-kajian">
+			<div class="row"> 
+				<div class="col-8 author">
+							<a routerLink="/p/{{ kajian.author }}">
+								<img src="../../../assets//component/images/user.png" alt="">
+								<span>{{ kajian.author }}</span>
+							</a>
+				</div>
+				<div class="col-4 option text-right dropdown" *ngIf="author != false">
+					<button type="button" id="dropdownOption" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fa fa-ellipsis-v"></i>
+					</button>
+					<div class="dropdown-menu" aria-labelledby="dropdownOption">
+						<a class="dropdown-item" routerLink="/e/{{id}}">Edit</a>
+						<button class="dropdown-item" (click)="delete(id)">Delete</button>
+					</div>
+				</div>
+			</div>
+			<div class="kajian-img" *ngIf="kajian.poster?.startsWith('https://'); else noImg">
+				<img [src]="kajian.poster">
+			</div>
+			<div class="kajian-title">
+				<h2>{{ kajian.judul}}</h2>
+				<p>by {{ kajian.pemateri }}
+				</p>
+			</div>
+				<hr>
+			<div  class="kajian-desc">
+				<p>
+					<span>{{ kajian.lokasi }}</span> <br>
+					{{ kajian.tanggal }}
+				</p>
+				<div class="kajian-kategori"><a href="#">{{ kajian.kategori }}</a></div>
+			</div>
+		</div>
 	</div>
-  <div class="kajian-img" *ngIf="kajian.poster?.length > 0; else noImg">
-    <img [src]="kajian.poster">
-  </div>
-  <div class="kajian-title">
-    <h2>{{ kajian.judul}}</h2>
-    <p>by {{ kajian.pemateri }}
-    </p>
-  </div>
-    <hr>
-  <div  class="kajian-desc">
-    <p>
-			<span>{{ kajian.lokasi }}</span> <br>
-			{{ kajian.tanggal }}
-    </p>
-    <div class="kajian-kategori"><a href="#">{{ kajian.kategori }}</a></div>
-  </div>
-</div>
 </div>
 <ng-template #noImg>
 	<div class="kajian-img-loader">
