--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -2,6 +2,7 @@
   <div class="container">
       <div class="col-12 offset-md-2 offset-lg-3 content__header">
           <h2>Post Kajian</h2>
+          <p>{{ kajian.authorPhoto }}</p>
       </div>
       <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body">
           <form (ngSubmit)="onSubmit()">
