--- a/src/app/templates/not-found/not-found.component.html
+++ b/src/app/templates/not-found/not-found.component.html
@@ -1,3 +1,6 @@
-<p>
-  Page not found!
-</p>
+<div class="message404">
+  <h2>Whoops!</h2>
+  <p>Sorry, the page you're looking for is not found.</p>
+  <br>
+  <a routerLink="/" class="btn btn-info">Back to Home</a>
+</div>
