--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,14 +5,13 @@
           <img src="assets/templates/img/img-01.png" alt="IMG">
         </div>
           <form [formGroup]="userForm" class="login100-form validate-form" (ngSubmit)="login()">
-            <span class="login100-form-title">
-              SIJAKI
-              <br>
-              <small style="font-family: sans-serif; font-size: 1rem; color: #999;">Sistem Informasi Jadwal Kajian Islam</small>
-            </span>
+            <div class="login100-form-title">
+              <h2>SIJAKI</h2>
+              <p>Sistem Informasi Jadwal Kajian Islam</p>
+            </div>
             <app-notification></app-notification>
 
-            <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+            <div class="wrap-input100 validate-input email-input" data-validate = "Valid email is required: ex@abc.xyz">
               <input class="input100" type="text" name="email" placeholder="Email" formControlName="email" required>
               <span class="focus-input100"></span>
               <span class="symbol-input100">
