--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,5 +1,8 @@
 <section id="content">
     <div class="container">
+        <div class="col-12 offset-md-2 offset-lg-3 text-left backBtn">
+          <a routerLink="/p/{{ user.username }}" class="btn btn-info"><i class="fa fa-chevron-left"></i> &nbsp;Back</a>
+        </div>
         <div class="col-12 offset-md-2 offset-lg-3 content__header">
             <h2>Edit Profile</h2>
         </div>
@@ -19,7 +22,7 @@
                 </div>
                 <div class="form-group">
                   <label for="poster">Foto Profil</label>
-                  <input type="file" class="form-control" id="poster" [(ngModel)]="user.photoUrl" name="photoUrl" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
+                  <input type="file" class="form-control" id="poster" name="photoUrl" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
                 </div>
               <button type="submit" class="btn btn-info btn-block">Submit</button>
             </form>
