--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -3,11 +3,11 @@
 }
 .profile__photo {
     border-radius: 50%;
-    border: 1px solid black;
+    border: 1px solid #f0f0f0;
     width: 100px;
     height: 100px;
     overflow: hidden;
-    margin: 0 auto;
+    margin: 1em auto 0;
 }
 .profile__photo img {
     width: auto;
@@ -57,6 +57,11 @@
 .kajian-saya ul li img {
     height: 100px;
     border-radius: 8px;
+}
+.followBtn {
+    margin-top: .3em;
+    font-size: .7rem !important;
+    padding: .3em 1.5em !important;
 }
 @media screen and (max-width: 575px){
     .kajian-saya .img { padding-left: 0; }
