--- a/src/app/components/set-new-profile/set-new-profile.component.css
+++ b/src/app/components/set-new-profile/set-new-profile.component.css
@@ -1,3 +1,16 @@
 .profile-img-default img {
+    width: auto;
+    max-height: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+.profile-img-default {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border: 1px solid #cdcdcd;
+    overflow: hidden;
     border-radius: 50%;
+    margin-bottom: 1em;
 }
