--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,5 +1,5 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light custom-nav">
-        <a class="navbar-brand" routerLink="/"><img src="assets/templates/img/icons/books.ico" height="40"></a>
+        <a class="navbar-brand" routerLink="/"><img src="assets/templates/img/icons/books.ico" height="40"> SIJAKI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,7 @@
             </li>
             <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
           true}">
-              <a class="nav-link" routerLink="/profile">Profile</a>
+              <a class="nav-link" href="/p/{{ username }}">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link btn-out" routerLink="" (click)="logout()">Sign Out</a>
