--- a/src/assets/component/css/main.css
+++ b/src/assets/component/css/main.css
@@ -9,7 +9,8 @@
 
 body {
     background-color: #E1E1E1 !important;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif !important;
+    font-weight: 300 !important;
     font-size: 12px !important;
     padding-bottom: 100px;
 }
@@ -41,6 +42,13 @@ input, select {
 .addBtn {
     font-size: 12px !important;
     color: #fff !important;
+}
+.backBtn a {
+    font-weight: 300;
+    font-family: 'Lato', sans-serif;
+}
+.backBtn a, .backBtn i {
+    font-size: .8rem;
 }
 .content__body {
     background-color: #fff;
@@ -74,12 +82,21 @@ input, select {
     font-size: .8rem;
 }
 .content__body.masjid {
-    padding: 1em 2em !important;
+    padding: 2em !important;
 }
 .content__body.kajian h2, .content__body.masjid h2 {
     font-size: 2em;
-    border-left: 4px solid cyan;
     padding-left: 10px;
+}
+.content__body.masjid:before {
+    content: '';
+    width: 5px;
+    height: 30px;
+    background: #02B7E9;
+    position: absolute;
+    top: 50%;
+    transform:translateY(-50%);
+    left: -2.5px;
 }
 .kajian-img {
     width: 100%;
@@ -89,7 +106,7 @@ input, select {
 .kajian-img img {
     width: 100%;
 }
-.kajian-title, .masjid-title {
+.kajian-title {
     padding-top: 2em;
 }
 .kajian-title p, .masjid-title p {
