--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -4,9 +4,9 @@
         <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 content__header">
             <div class="form-group">
               <label>Kota </label>
-              <select class="form-control">
-                <option>Bandung</option>
-                <option>Jakarta</option>
+              <select class="form-control" (change)="filterKajian('==')" [(ngModel)]="kota">
+                <option value="Bandung">Bandung</option>
+                <option value="Jakarta">Jakarta</option>
               </select>
             </div>
             <div class="form-group">
@@ -14,11 +14,15 @@
               <br>
               <div class="row">
                 <div class="col-4">
-                    <button class="btn btn-info btn-sm">Hari Ini</button></div>
+                    <button class="btn btn-info btn-sm" (click)="hariIni()">Hari Ini</button>
+                </div>
                 <div class="col">
-                    <input class="form-control" type="date">
+                    <input class="form-control" type="date" [(ngModel)]="tgl" (change)="filterTgl()">
                 </div>
               </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-info btn-sm" (click)="all()">Semua Kajian</button>
             </div>
             <h2>Kajian</h2>
         </div>
@@ -43,7 +47,7 @@
           <div  class="kajian-desc">
             <p>
               <span>{{ data.lokasi }}</span> <br>
-              {{ data.tanggal }}
+              {{ data.tanggal | date : "d MMMM yyyy" }}
             </p>
             <div class="kajian-kategori"><a href="#">{{ data.kategori }}</a></div>
           </div>
@@ -73,7 +77,7 @@
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>@{{ data.pemateri }}<br>
-                {{ data.lokasi }} <br> {{ data.tanggal }}
+                {{ data.lokasi }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
                 </p>
               </div>
             </a>
@@ -90,7 +94,7 @@
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>{{ data.pemateri }}<br>
-                {{ data.lokasi }} <br> {{ data.tanggal }}
+                {{ data.lokasi }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
                 </p>
               </div>
             </a>
@@ -107,7 +111,7 @@
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>{{ data.pemateri }}<br>
-                {{ data.lokasi }} <br> {{ data.tanggal }}
+                {{ data.lokasi }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
                 </p>
               </div>
             </a>
