Feature : Follow & Unfollow

--- a/src/app/components/detail-kajian/detail-kajian.component.html
+++ b/src/app/components/detail-kajian/detail-kajian.component.html
@@ -29,7 +29,7 @@
 				<hr>
 			<div  class="kajian-desc">
 				<p>
-					<span>{{ kajian.lokasi }}</span> <br>
+					<span>{{ kajian.lokasi }}, {{ kajian.kota }}</span> <br>
 					{{ kajian.tanggal | date : "d MMMM yyyy" }}
 				</p>
 				<div class="kajian-kategori"><a href="#">{{ kajian.kategori }}</a></div>
