--- a/src/app/components/kajian/edit/edit.component.html
+++ b/src/app/components/kajian/edit/edit.component.html
@@ -1,7 +1,7 @@
 <section id="content">
   <div class="container">
       <div class="col-12 offset-md-2 offset-lg-3 text-left backBtn">
-        <a routerLink="d/{{ id }}" class="btn btn-primary"><i class="fa fa-chevron-left"></i>&nbsp; Back</a>
+        <a routerLink="/d/{{ id }}" class="btn btn-primary"><i class="fa fa-chevron-left"></i>&nbsp; Back</a>
       </div>
       <div class="col-12 offset-md-2 offset-lg-3 content__header">
           <h2>Edit Kajian</h2>
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <label for="poster">Poster</label>
-                <input type="file" class="form-control" id="poster" [(ngModel)]="kajian.poster" name="poster" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
+                <input type="file" class="form-control" id="poster" name="poster" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
               </div>
             <button type="submit" class="btn btn-info btn-block">Submit</button>
           </form>
