--- a/src/app/components/kajian/kajian.component.css
+++ b/src/app/components/kajian/kajian.component.css
@@ -53,3 +53,22 @@ a .masjid-title {
 	padding: 9px;
 	border-radius: 8px;
 }
+select { width: 100px; }
+input { width: 130px; }
+select, input {
+	padding: .5em 1em;
+	margin-left: .5em;
+	border-radius: 6px;
+	vertical-align: middle;
+}
+.filterBtn {
+	font-size: 1em;
+	padding: .25em 1em !important;
+}
+.filter {
+	margin-bottom: 5px;
+}
+.noData p {
+	font-size: .9em;
+	color: #cdcdcd;
+}
