--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -1,28 +1,19 @@
 <section id="content" class="content-kajian">
   <div class="container">
       <div class="row">
-        <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 content__header">
-            <div class="form-group">
+        <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 content__header text-center">
+            <div class="col filter">
               <label>Kota </label>
-              <select class="form-control" (change)="filterKajian('==')" [(ngModel)]="kota">
+              <select (change)="filterKajian('==')" [(ngModel)]="kota">
                 <option value="Bandung">Bandung</option>
                 <option value="Jakarta">Jakarta</option>
-              </select>
+              </select>&nbsp;
+              <button class="filterBtn btn btn-info btn-sm" (click)="all()">Semua Kajian</button>
             </div>
-            <div class="form-group">
-              <label>Tanggal </label>
-              <br>
-              <div class="row">
-                <div class="col-4">
-                    <button class="btn btn-info btn-sm" (click)="hariIni()">Hari Ini</button>
-                </div>
-                <div class="col">
-                    <input class="form-control" type="date" [(ngModel)]="tgl" (change)="filterTgl()">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-info btn-sm" (click)="all()">Semua Kajian</button>
+            <div class="col filter">
+              <label>Tanggal &nbsp;</label>
+              <button class="filterBtn btn btn-info btn-sm" (click)="hariIni()">Hari Ini</button>
+              <input type="date" [(ngModel)]="tgl" (change)="filterTgl()">
             </div>
             <h2>Kajian</h2>
         </div>
@@ -46,7 +37,7 @@
             <hr>
           <div  class="kajian-desc">
             <p>
-              <span>{{ data.lokasi }}</span> <br>
+              <span>{{ data.lokasi }}, {{ data.kota }}</span> <br>
               {{ data.tanggal | date : "d MMMM yyyy" }}
             </p>
             <div class="kajian-kategori"><a href="#">{{ data.kategori }}</a></div>
@@ -71,13 +62,14 @@
     <div class="tab-content" id="myTabContent">
       <!-- Tab Rutin -->
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div *ngIf="rutin?.length > 0; else noData">
+        <div *ngIf="rutin?.length > 0; else noDataCategory">
           <div *ngFor="let data of rutin">
             <a routerLink="/d/{{ data.id }}">
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>@{{ data.pemateri }}<br>
-                {{ data.lokasi }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
+                {{ data.lokasi }}, , {{ data.kota }}
+                 <br> {{ data.tanggal | date : "d MMMM yyyy" }}
                 </p>
               </div>
             </a>
@@ -88,13 +80,13 @@
       <!-- End Of Tab Rutin -->
       <!-- Tab Tematik -->
       <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-        <div *ngIf="tematik?.length > 0; else noData">
+        <div *ngIf="tematik?.length > 0; else noDataCategory">
           <div *ngFor="let data of tematik">
             <a routerLink="/d/{{ data.id }}">
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>{{ data.pemateri }}<br>
-                {{ data.lokasi }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
+                {{ data.lokasi }}, {{ data.kota }} <br> {{ data.tanggal | date : "d MMMM yyyy" }}
                 </p>
               </div>
             </a>
@@ -105,7 +97,7 @@
       <!-- End of Tab Tematik -->
       <!-- Tab Tabligh Akbar -->
       <div class="tab-pane fade show" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-        <div *ngIf="tablighAkbar?.length > 0; else noData">
+        <div *ngIf="tablighAkbar?.length > 0; else noDataCategory">
           <div *ngFor="let data of tablighAkbar">
             <a routerLink="/d/{{ data.id }}">
               <div class="masjid-title">
@@ -125,7 +117,13 @@
 </section>
 
 <ng-template #noData>
-  <div class="text-center">
+    <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 content__body noData text-center">
+    <p>Data tidak ditemukan.</p>
+  </div>
+</ng-template>
+
+<ng-template #noDataCategory>
+    <div class="noData text-center">
     <p>Data tidak ditemukan.</p>
   </div>
 </ng-template>
