--- a/src/assets/templates/css/main.css
+++ b/src/assets/templates/css/main.css
@@ -168,16 +168,19 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #9053c7;
+  background: url('../../component/images/bg-masjid.jpeg');
+  background-size: cover;
+
+  /* background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 
 .wrap-login100 {
   width: 960px;
-  background: #fff;
+  background: rgba(255,255,255,.5);
   border-radius: 10px;
   overflow: hidden;
 
