--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -7,11 +7,29 @@
     font-size: 2rem;
     font-weight: 900;
     color: #F6970D;
+    text-shadow: 1px 1px 0px #333;
 }
 .login100-form-title p {
     font-size: .8rem;
-    color: #cdcdcd;
+    color: #fff;
+    text-shadow: 1px 1px 0px #333;
+}
+.txt2 {
+    font-size: .8rem;
+    color: #fff;
+    background-color: rgba(0,0,0,.5);
+    border-radius: 50px;
+    padding: .5em 1em;
+}
+.txt2:hover{
+    background-color: #F6970D;
 }
 .email-input {
     margin-top: .5em;
+}
+.login100-form-btn {
+    background: #F6970D;
+}
+.login100-form-btn:hover {
+    background: #F15C48;
 }
