--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -1,7 +1,7 @@
 <section id="content">
     <div class="container">
         <div class="col-12 offset-md-2 offset-lg-3 text-left backBtn">
-          <a routerLink="/p/{{ user.username }}" class="btn btn-info"><i class="fa fa-chevron-left"></i> &nbsp;Back</a>
+          <a routerLink="/i/p/{{ user.username }}" class="btn btn-info"><i class="fa fa-chevron-left"></i> &nbsp;Back</a>
         </div>
         <div class="col-12 offset-md-2 offset-lg-3 content__header">
             <h2>Edit Profile</h2>
