--- a/src/app/components/kajian/edit/edit.component.html
+++ b/src/app/components/kajian/edit/edit.component.html
@@ -1,7 +1,7 @@
 <section id="content">
   <div class="container">
       <div class="col-12 offset-md-2 offset-lg-3 text-left backBtn">
-        <a routerLink="/d/{{ id }}" class="btn btn-primary"><i class="fa fa-chevron-left"></i>&nbsp; Back</a>
+        <a routerLink="/i/d/{{ id }}" class="btn btn-primary"><i class="fa fa-chevron-left"></i>&nbsp; Back</a>
       </div>
       <div class="col-12 offset-md-2 offset-lg-3 content__header">
           <h2>Edit Kajian</h2>
