--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -21,13 +21,13 @@
       <div *ngIf="kajian?.length > 0; else noData">
         <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3 content__body kajian" *ngFor="let data of kajian">
           <div class="col-12 author">
-                <a routerLink="/p/{{ data.author }}">
+                <a routerLink="/i/p/{{ data.author }}">
                   <img src="../../../assets/component/images/user.png" alt="">
                   <span>{{ data.author }}</span>
                 </a>
           </div>
           <div class="kajian-img" *ngIf="data.poster?.length > 0; else noImg">
-            <a routerLink="d/{{ data.id }}"><img src="{{ data.poster }}"></a>
+            <a routerLink="/i/d/{{ data.id }}"><img src="{{ data.poster }}"></a>
           </div>
           <div class="kajian-title">
             <h2>{{ data.judul }}</h2>
@@ -64,7 +64,7 @@
       <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
         <div *ngIf="rutin?.length > 0; else noDataCategory">
           <div *ngFor="let data of rutin">
-            <a routerLink="/d/{{ data.id }}">
+            <a routerLink="/i/d/{{ data.id }}">
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>@{{ data.pemateri }}<br>
@@ -82,7 +82,7 @@
       <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div *ngIf="tematik?.length > 0; else noDataCategory">
           <div *ngFor="let data of tematik">
-            <a routerLink="/d/{{ data.id }}">
+            <a routerLink="/i/d/{{ data.id }}">
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>{{ data.pemateri }}<br>
@@ -99,7 +99,7 @@
       <div class="tab-pane fade show" id="contact" role="tabpanel" aria-labelledby="contact-tab">
         <div *ngIf="tablighAkbar?.length > 0; else noDataCategory">
           <div *ngFor="let data of tablighAkbar">
-            <a routerLink="/d/{{ data.id }}">
+            <a routerLink="/i/d/{{ data.id }}">
               <div class="masjid-title">
                 <h4>{{ data.judul }}</h4>
                 <p>{{ data.pemateri }}<br>
