--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -1,8 +1,5 @@
-<div class="col-xs-12" *ngIf="loggedIn; else frontpage">
+<div class="col-xs-12">
 	<app-header></app-header>
       <router-outlet></router-outlet>
 	<app-footer></app-footer>
 </div>
-<ng-template #frontpage>
-	<app-frontpage></app-frontpage>
-</ng-template>
